--- a/main.css
+++ b/main.css
@@ -8,10 +8,21 @@ a {
     text-decoration: none;
     font-family: 'VT323', monospace;
     font-size: 48px;
+    padding: 12px;
+    margin: 10px 74px;
+}
+
+#link_wrapper {
+/*    position: relative;*/
+    margin: 20px auto;
+    width: 1260px;
+    height: 100px;
 }
 
 #background_text_wrapper {
     font-family: 'VT323', monospace;
-    font-size: 36px;
+    font-size: 47px;
     color: white;
+    margin: 0 auto;
+    width: 1260px;
 }
